@@ -72,8 +72,8 @@ Row::Flags::operator!=(const Flags& y) const {
 }
 
 inline void*
-Row::Impl::operator new(const size_t fixed_size,
-			const dimension_type capacity) {
+Row_Impl_Handler::Impl::operator new(const size_t fixed_size,
+				     const dimension_type capacity) {
 #if CXX_SUPPORTS_FLEXIBLE_ARRAYS
   return ::operator new(fixed_size + capacity*sizeof(Coefficient));
 #else
@@ -83,69 +83,69 @@ Row::Impl::operator new(const size_t fixed_size,
 }
 
 inline void
-Row::Impl::operator delete(void* p) {
+Row_Impl_Handler::Impl::operator delete(void* p) {
   ::operator delete(p);
 }
 
 inline void
-Row::Impl::operator delete(void* p, dimension_type) {
+Row_Impl_Handler::Impl::operator delete(void* p, dimension_type) {
   ::operator delete(p);
 }
 
 inline dimension_type
-Row::Impl::max_size() {
+Row_Impl_Handler::Impl::max_size() {
   return size_t(-1)/sizeof(Coefficient);
 }
 
 inline dimension_type
-Row::Impl::size() const {
+Row_Impl_Handler::Impl::size() const {
   return size_;
 }
 
 inline void
-Row::Impl::set_size(const dimension_type new_size) {
+Row_Impl_Handler::Impl::set_size(const dimension_type new_size) {
   size_ = new_size;
 }
 
 inline void
-Row::Impl::bump_size() {
+Row_Impl_Handler::Impl::bump_size() {
   ++size_;
 }
 
 inline
-Row::Impl::Impl(const Flags f)
+Row_Impl_Handler::Impl::Impl(const Row::Flags f)
   : size_(0), flags_(f) {
 }
 
 inline
-Row::Impl::~Impl() {
+Row_Impl_Handler::Impl::~Impl() {
   shrink(0);
 }
 
 inline const Row::Flags&
-Row::Impl::flags() const {
+Row_Impl_Handler::Impl::flags() const {
   return flags_;
 }
 
 inline Row::Flags&
-Row::Impl::flags() {
+Row_Impl_Handler::Impl::flags() {
   return flags_;
 }
 
 inline Coefficient&
-Row::Impl::operator[](const dimension_type k) {
+Row_Impl_Handler::Impl::operator[](const dimension_type k) {
   assert(k < size());
   return vec_[k];
 }
 
 inline Coefficient_traits::const_reference
-Row::Impl::operator[](const dimension_type k) const {
+Row_Impl_Handler::Impl::operator[](const dimension_type k) const {
   assert(k < size());
   return vec_[k];
 }
 
 inline memory_size_type
-Row::Impl::total_memory_in_bytes(dimension_type capacity) const {
+Row_Impl_Handler::Impl::total_memory_in_bytes(dimension_type capacity) const {
   return
     sizeof(*this)
     + capacity*sizeof(Coefficient)
@@ -156,7 +156,7 @@ Row::Impl::total_memory_in_bytes(dimension_type capacity) const {
 }
 
 inline memory_size_type
-Row::Impl::total_memory_in_bytes() const {
+Row_Impl_Handler::Impl::total_memory_in_bytes() const {
   // In general, this is a lower bound, as the capacity of *this
   // may be strictly greater than `size_'
   return total_memory_in_bytes(size_);
@@ -167,29 +167,19 @@ Row::max_size() {
   return Impl::max_size();
 }
 
-inline Row::Impl_Pointer&
-Row::impl() {
-  return handler.impl_;
-}
-
-inline const Row::Impl_Pointer&
-Row::impl() const {
-  return handler.impl_;
-}
-
 inline dimension_type
 Row::size() const {
-  return impl()->size();
+  return impl->size();
 }
 
 inline const Row::Flags&
 Row::flags() const {
-  return impl()->flags();
+  return impl->flags();
 }
 
 inline Row::Flags&
 Row::flags() {
-  return impl()->flags();
+  return impl->flags();
 }
 
 #if EXTRA_ROW_DEBUG
@@ -200,13 +190,16 @@ Row::capacity() const {
 #endif
 
 inline
-Row::Impl_Handler::Impl_Handler()
-  : impl_(0) {
+Row::Row_Impl_Handler::Row_Impl_Handler()
+  : impl(0) {
+#if EXTRA_ROW_DEBUG
+  capacity_ = 0;
+#endif
 }
 
 inline
-Row::Impl_Handler::~Impl_Handler() {
-  delete impl_;
+Row::Row_Impl_Handler::~Row_Impl_Handler() {
+  delete impl;
 }
 
 inline
@@ -214,40 +207,50 @@ Row::Row() {
 }
 
 inline void
-Row::expand_within_capacity(const dimension_type new_size) {
-  assert(impl());
-#if EXTRA_ROW_DEBUG
-  assert(new_size <= capacity_);
-#endif
-  impl()->expand_within_capacity(new_size);
-}
-
-inline void
-Row::copy_construct_coefficients(const Row& y) {
-  assert(impl() && y.impl());
-#if EXTRA_ROW_DEBUG
-  assert(y.size() <= capacity_);
-#endif
-  impl()->copy_construct_coefficients(*(y.impl()));
-}
-
-inline void
-Row::construct(const dimension_type sz,
+Row::allocate(
 #if CXX_SUPPORTS_FLEXIBLE_ARRAYS
 	       const
 #endif
 	       dimension_type capacity,
 	       const Flags f) {
-  assert(sz <= capacity && capacity <= max_size());
+  assert(capacity <= max_size());
 #if !CXX_SUPPORTS_FLEXIBLE_ARRAYS
   if (capacity == 0)
     ++capacity;
 #endif
-  impl() = new (capacity) Impl(f);
-  expand_within_capacity(sz);
+  assert(impl == 0);
+  impl = new (capacity) Impl(f);
 #if EXTRA_ROW_DEBUG
+  assert(capacity_ == 0);
   capacity_ = capacity;
 #endif
+}
+
+inline void
+Row::expand_within_capacity(const dimension_type new_size) {
+  assert(impl);
+#if EXTRA_ROW_DEBUG
+  assert(new_size <= capacity_);
+#endif
+  impl->expand_within_capacity(new_size);
+}
+
+inline void
+Row::copy_construct_coefficients(const Row& y) {
+  assert(impl && y.impl);
+#if EXTRA_ROW_DEBUG
+  assert(y.size() <= capacity_);
+#endif
+  impl->copy_construct_coefficients(*(y.impl));
+}
+
+inline void
+Row::construct(const dimension_type sz,
+	       const dimension_type capacity,
+	       const Flags f) {
+  assert(sz <= capacity && capacity <= max_size());
+  allocate(capacity, f);
+  expand_within_capacity(sz);
 }
 
 inline void
@@ -268,60 +271,32 @@ Row::Row(const dimension_type sz, const Flags f) {
 }
 
 inline
-Row::Row(const Row& y) {
-  if (y.impl()) {
-    impl() = new (compute_capacity(y.size(), Row::max_size())) Impl(y.flags());
+Row::Row(const Row& y)
+  : Row_Impl_Handler() {
+  if (y.impl) {
+    allocate(compute_capacity(y.size(), Row::max_size()), y.flags());
     copy_construct_coefficients(y);
   }
-#if EXTRA_ROW_DEBUG
-# if CXX_SUPPORTS_FLEXIBLE_ARRAYS
-  capacity_ = y.impl() ? compute_capacity(y.size(), Row::max_size()) : 0;
-# else
-  capacity_ = y.impl() ? compute_capacity(y.size(), Row::max_size()) : 1;
-# endif
-#endif
 }
 
 inline
 Row::Row(const Row& y,
-#if CXX_SUPPORTS_FLEXIBLE_ARRAYS
-	 const
-#endif
-	 dimension_type capacity) {
+	 const dimension_type capacity) {
+  assert(y.impl);
   assert(y.size() <= capacity && capacity <= max_size());
-#if !CXX_SUPPORTS_FLEXIBLE_ARRAYS
-  if (capacity == 0)
-    ++capacity;
-#endif
-  if (y.impl()) {
-    impl() = new (capacity) Impl(y.flags());
-    copy_construct_coefficients(y);
-  }
-#if EXTRA_ROW_DEBUG
-  capacity_ = capacity;
-#endif
+  allocate(capacity, y.flags());
+  copy_construct_coefficients(y);
 }
 
 inline
 Row::Row(const Row& y,
 	 const dimension_type sz,
-#if CXX_SUPPORTS_FLEXIBLE_ARRAYS
-	 const
-#endif
-	 dimension_type capacity) {
+	 const dimension_type capacity) {
+  assert(y.impl);
   assert(y.size() <= sz && sz <= capacity && capacity <= max_size());
-#if !CXX_SUPPORTS_FLEXIBLE_ARRAYS
-  if (capacity == 0)
-    ++capacity;
-#endif
-  if (y.impl()) {
-    impl() = new (capacity) Impl(y.flags());
-    copy_construct_coefficients(y);
-    expand_within_capacity(sz);
-  }
-#if EXTRA_ROW_DEBUG
-  capacity_ = capacity;
-#endif
+  allocate(capacity, y.flags());
+  copy_construct_coefficients(y);
+  expand_within_capacity(sz);
 }
 
 inline
@@ -330,13 +305,13 @@ Row::~Row() {
 
 inline void
 Row::shrink(const dimension_type new_size) {
-  assert(impl());
-  impl()->shrink(new_size);
+  assert(impl);
+  impl->shrink(new_size);
 }
 
 inline void
 Row::swap(Row& y) {
-  std::swap(impl(), y.impl());
+  std::swap(impl, y.impl);
 #if EXTRA_ROW_DEBUG
   std::swap(capacity_, y.capacity_);
 #endif
@@ -344,7 +319,7 @@ Row::swap(Row& y) {
 
 inline void
 Row::assign(Row& y) {
-  impl() = y.impl();
+  impl = y.impl;
 #if EXTRA_ROW_DEBUG
   capacity_ = y.capacity_;
 #endif
@@ -362,17 +337,19 @@ Row::operator=(const Row& y) {
 
 inline Coefficient&
 Row::operator[](const dimension_type k) {
-  return (*impl())[k];
+  assert(impl);
+  return (*impl)[k];
 }
 
 inline Coefficient_traits::const_reference
 Row::operator[](const dimension_type k) const {
-  return (*impl())[k];
+  assert(impl);
+  return (*impl)[k];
 }
 
 inline memory_size_type
 Row::external_memory_in_bytes(dimension_type capacity) const {
-  return impl()->total_memory_in_bytes(capacity);
+  return impl->total_memory_in_bytes(capacity);
 }
 
 inline memory_size_type
@@ -383,9 +360,9 @@ Row::total_memory_in_bytes(dimension_type capacity) const {
 inline memory_size_type
 Row::external_memory_in_bytes() const {
 #if EXTRA_ROW_DEBUG
-  return impl()->total_memory_in_bytes(capacity_);
+  return impl->total_memory_in_bytes(capacity_);
 #else
-  return impl()->total_memory_in_bytes();
+  return impl->total_memory_in_bytes();
 #endif
 }
 
